# dic-nico-intersection-pixiv

./: .ghci  .gitignore  .stylish-haskell  .stylish-haskell.yaml  LICENSE  README.md  dic-nico-union-pixiv.cabal  package.yaml  stack.yaml
.stack-work/odir/: Main.hi
src/: Main.hs
